# ontos-ml-workbench

./: .databricksignore  .gitignore  .gitmodules  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  LICENSE  QUICKSTART.md  README.md  app.yaml  databricks.yml
apx-test/: .gitignore  README.md  app.yml  databricks.yml  package.json  pyproject.toml  tsconfig.json
apx-test/.claude/skills/apx/: SKILL.md
apx-test/.cursor/: mcp.json
apx-test/.cursor/rules/: project.mdc
apx-test/src/mirion_test_/backend/: app.py  config.py  dependencies.py  logger.py  router.py  runtime.py  utils.py
apx-test/src/mirion_test_/ui/: index.html
apx-test/src/mirion_test_/ui/routes/: __root.tsx
ontos-ml-workbench/: CLAUDE.md  RUNBOOK.md  app.yaml  pyproject.toml
ontos-ml-workbench/.claude/: settings.json
ontos-ml-workbench/.claude/ccpm/scripts/pm/: issue-sync.sh
ontos-ml-workbench/.claude/epics/ontos-ml-workbench/: 2.md  4.md  7.md  9.md
ontos-ml-workbench/.claude/hooks/node-typescript/: quality-check.js
ontos-ml-workbench/.claude/rules/: databricks-deployment.md
ontos-ml-workbench/.git-hooks/: pre-commit.example
ontos-ml-workbench/backend/: ENDPOINT_QUICK_REFERENCE.md
ontos-ml-workbench/backend/app/: __init__.py
ontos-ml-workbench/backend/app/api/dqx/: router.py
ontos-ml-workbench/backend/app/api/v1/: router.py
ontos-ml-workbench/backend/app/core/: config.py
ontos-ml-workbench/backend/app/models/: __init__.py  gap_analysis.py  training_job.py
ontos-ml-workbench/backend/app/services/: agent_retriever_service.py  cache_service.py  dspy_integration_service.py  sheet_service.py
ontos-ml-workbench/backend/scripts/: create_labeling_job.py  create_sample_labeling_data.py  seed_with_connector.py
ontos-ml-workbench/backend/tests/: test_examples_api.py
ontos-ml-workbench/docs/: SPRINT_PLAN.md
ontos-ml-workbench/docs/archive/: BROWSER_MODAL_COMPLETION.md  BROWSER_MODAL_IMPLEMENTATION_GUIDE.md  CHARTS_IMPLEMENTATION.md  DEMO_DATA_SETUP.md  DEMO_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_FEVM.sh  FEVM_SETUP.md  FINAL_VERIFICATION.md  FRONTEND_ALIGNMENT_CHECK.md  QUICK_DEPLOY.sh  QUICK_FIX_MISSING_TABLES.md  README.md  TEMPLATE_TABLE_VIEW.tsx  VERIFICATION_RESULTS.md
ontos-ml-workbench/docs/archive/cleanup-reports/: CLEANUP_SUMMARY_2026_02_11.md  DOCS_CLEANUP_PLAN.md  START_HERE.md
ontos-ml-workbench/docs/archive/development-notes/: APX_INSTALLATION_GUIDE.md  APX_QUICKSTART.md  APX_SETUP.md  CLEANUP_PLAN.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_MAP.md  GETTING_STARTED.md  MONITOR_SCHEMA_FIX_INSTRUCTIONS.md  README_RESTORATION.md  SCHEMA_FIXES_2026_02_11.md  SCHEMA_MANAGEMENT.md  SCHEMA_SIMPLIFICATION.md  STATUS.md  TASK3_COMPLETION.md  TMUX_SETUP.md  TOOLBOX_INVENTORY.md
ontos-ml-workbench/docs/archive/testing-reports/: BACKEND_TEST_RESULTS.md
ontos-ml-workbench/docs/implementation/: canonical-labels-full.md  canonical-labels-ready.md
ontos-ml-workbench/frontend/: MODULE_ARCHITECTURE.md  index.html
ontos-ml-workbench/frontend/e2e/pages/: DataPage.ts  ImprovePage.ts
ontos-ml-workbench/frontend/e2e/tests/: 01-data-stage.spec.ts  04-improve-stage.spec.ts
ontos-ml-workbench/frontend/e2e/utils/: wait-helpers.ts
ontos-ml-workbench/frontend/src/: main.tsx
ontos-ml-workbench/frontend/src/components/: CanonicalLabelingTool.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  StatusBadge.tsx  TemplateEditor.tsx
ontos-ml-workbench/frontend/src/components/apx/: index.ts
ontos-ml-workbench/frontend/src/components/charts/: MetricsLineChart.tsx
ontos-ml-workbench/frontend/src/components/labeling/: AnnotationInterface.tsx  TaskBoardView.tsx  index.tsx
ontos-ml-workbench/frontend/src/components/ui/: index.ts
ontos-ml-workbench/frontend/src/hooks/: useKeyboardShortcuts.ts  useTheme.ts
ontos-ml-workbench/frontend/src/modules/dspy/: index.ts
ontos-ml-workbench/frontend/src/pages/: DSPyOptimizationPage.tsx  SheetBuilder.tsx  TemplateBuilderPage.tsx
ontos-ml-workbench/frontend/src/services/: api.test.ts
ontos-ml-workbench/notebooks/improve/: feedback_analysis.py
ontos-ml-workbench/schemas/: 01_create_catalog.sql  03_templates.sql  05_training_sheets.sql  99_validate_and_seed.sql  README.md  add_ml_columns_to_training_sheets.sql  migrate_sheets_schema.py  seed_canonical_labels.py  seed_sheets.sql  verify_schema.py
ontos-ml-workbench/schemas/archive/superseded/: create_training_tables.sql
ontos-ml-workbench/scripts/: README.md  apply_fixes_simple.py  cleanup-schemas.sh  migrate_templates_ml_columns.py  spawn-agent.sh  teardown.sh  test_ml_columns_e2e.py  verify_database.py
ontos-ml-workbench/synthetic_data/anomaly_detection/: anomalies.json
ontos-ml-workbench/synthetic_data/examples/: defect_detection.json
ontos-ml-workbench/synthetic_data/predictive_maintenance/: telemetry.csv
ontos-ml-workbench/synthetic_data/templates/: predictive_maintenance_template.json
ontos/src/: app.yaml  databricks.yaml  manifest.yaml  package.json  pyproject.toml  requirements.txt
ontos/src/backend/: .env.example  alembic.ini  requirements.txt  run.sh
ontos/src/backend/alembic/: env.py
ontos/src/backend/src/: __init__.py  app.py
ontos/src/backend/tests/: test_catalog_commander_manager.py  test_compliance_actions.py  test_compliance_dsl.py  test_file_security.py  test_sparql_security.py
ontos/src/docs/: README.md  RELEASE_NOTES.md  USER-GUIDE.md  compliance-dsl-guide.md  compliance-dsl-reference.md  docs.yaml  process-workflows-guide.md
ontos/src/docs/jobs/: job-configuration-system.md  uc-bulk-import.md
ontos/src/frontend/: .prettierignore  eslint.config.js  frontend-licenses.csv  frontend-licenses.json  index.html  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
ontos/src/frontend/public/: index.html  manifest.json
ontos/src/frontend/src/: app.tsx  index.css
ontos/src/frontend/tests/: contract-outputport-mapping.spec.ts  costs-panel.spec.ts  i18n.spec.ts  team-assignment.spec.ts
ontos/src/scripts/: build_static.sh  bump_version.py  check_translations.py  copy_static.py  generate_release_notes.py
(+2052 files in other folders)
